Interface layout for main app created

--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -76,58 +76,153 @@
                         <rect key="frame" x="0.0" y="0.0" width="380" height="570"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="isr-qG-Dt4">
-                                <rect key="frame" x="-2" y="0.0" width="384" height="194"/>
-                                <animations/>
-                                <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="center" title="directionsLabel" placeholderString="" id="xLI-cg-ybg">
-                                    <font key="font" metaFont="system" size="16"/>
-                                    <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1Kb-yH-Ddw">
-                                <rect key="frame" x="15" y="233" width="351" height="45"/>
+                            <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pqW-la-yHh">
+                                <rect key="frame" x="13" y="494" width="349" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="347" id="Lga-JA-dAR"/>
-                                    <constraint firstAttribute="height" constant="45" id="ThL-sn-VJh"/>
+                                    <constraint firstAttribute="width" constant="345" id="jc1-HQ-kjT"/>
+                                    <constraint firstAttribute="height" constant="21" id="wH3-Vr-s47"/>
                                 </constraints>
                                 <animations/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Swipe.Translate.Easy" id="q6H-D2-sma">
-                                    <font key="font" metaFont="system" size="37"/>
-                                    <color key="textColor" red="0.87450980389999999" green="0.20392156859999999" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="74j-7Y-fNW">
-                                <rect key="frame" x="64" y="292" width="252" height="252"/>
+                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="pg8-YA-YtJ">
+                                    <font key="font" metaFont="system"/>
+                                    <segments>
+                                        <segment width="20"/>
+                                        <segment width="114" selected="YES" tag="1"/>
+                                        <segment width="103">
+                                            <nil key="label"/>
+                                        </segment>
+                                        <segment width="103">
+                                            <nil key="label"/>
+                                        </segment>
+                                    </segments>
+                                </segmentedCell>
+                            </segmentedControl>
+                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BeF-Vu-JzK">
+                                <rect key="frame" x="15" y="308" width="345" height="180"/>
+                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="pnI-2W-DG5">
+                                    <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3RX-CP-4qC">
+                                            <rect key="frame" x="0.0" y="86" width="181" height="94"/>
+                                            <animations/>
+                                        </view>
+                                    </subviews>
+                                    <animations/>
+                                </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="252" id="29t-Jd-50C"/>
-                                    <constraint firstAttribute="height" constant="252" id="byo-8I-zEJ"/>
+                                    <constraint firstAttribute="height" constant="180" id="51f-vQ-diX"/>
+                                    <constraint firstAttribute="width" constant="345" id="xIe-fD-b8d"/>
                                 </constraints>
                                 <animations/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="axesIndependently" image="LogoIcon" id="FHD-Pd-ydI"/>
-                            </imageView>
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="c50-xx-V7I">
+                                    <rect key="frame" x="0.0" y="164" width="345" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </scroller>
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="eE7-Xh-ah4">
+                                    <rect key="frame" x="329" y="0.0" width="16" height="180"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </scroller>
+                            </scrollView>
+                            <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="RjJ-ix-sDr">
+                                <rect key="frame" x="15" y="297" width="365" height="5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="365" id="xpd-3c-zBL"/>
+                                    <constraint firstAttribute="height" constant="1" id="ynP-uy-hgD"/>
+                                </constraints>
+                                <animations/>
+                                <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                                <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <font key="titleFont" metaFont="system"/>
+                            </box>
+                            <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="I1K-y0-ISH">
+                                <rect key="frame" x="13" y="251" width="349" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="345" id="N4b-RZ-cTl"/>
+                                    <constraint firstAttribute="height" constant="21" id="bhu-Ud-JKP"/>
+                                </constraints>
+                                <animations/>
+                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="oPA-OJ-ecS">
+                                    <font key="font" metaFont="system"/>
+                                    <segments>
+                                        <segment width="20">
+                                            <nil key="label"/>
+                                        </segment>
+                                        <segment width="106" selected="YES" tag="1">
+                                            <nil key="label"/>
+                                        </segment>
+                                        <segment width="107">
+                                            <nil key="label"/>
+                                        </segment>
+                                        <segment width="107">
+                                            <nil key="label"/>
+                                        </segment>
+                                    </segments>
+                                </segmentedCell>
+                            </segmentedControl>
+                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fla-Af-5lv">
+                                <rect key="frame" x="15" y="65" width="345" height="180"/>
+                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="mnV-9K-CrY">
+                                    <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bZj-C1-U9B">
+                                            <rect key="frame" x="0.0" y="86" width="181" height="94"/>
+                                            <animations/>
+                                        </view>
+                                    </subviews>
+                                    <animations/>
+                                </clipView>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="VDA-go-RJi"/>
+                                    <constraint firstAttribute="width" constant="345" id="Zui-Yo-9p9"/>
+                                </constraints>
+                                <animations/>
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="MRP-dT-FJy">
+                                    <rect key="frame" x="0.0" y="164" width="345" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </scroller>
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="hZz-FG-5Qb">
+                                    <rect key="frame" x="329" y="0.0" width="16" height="180"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </scroller>
+                            </scrollView>
+                            <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Jt6-rG-U8x">
+                                <rect key="frame" x="15" y="54" width="365" height="5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="JAL-YS-lit"/>
+                                    <constraint firstAttribute="width" constant="365" id="chY-vC-gEA"/>
+                                </constraints>
+                                <animations/>
+                                <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                                <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <font key="titleFont" metaFont="system"/>
+                            </box>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="74j-7Y-fNW" secondAttribute="bottom" constant="292" id="3iX-IW-b4O"/>
-                            <constraint firstItem="1Kb-yH-Ddw" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="17" id="GU2-O3-EO1"/>
-                            <constraint firstItem="1Kb-yH-Ddw" firstAttribute="top" secondItem="74j-7Y-fNW" secondAttribute="bottom" constant="14" id="Sq3-LT-D4v"/>
-                            <constraint firstAttribute="trailing" secondItem="74j-7Y-fNW" secondAttribute="trailing" constant="64" id="Udi-DU-ASQ"/>
-                            <constraint firstItem="74j-7Y-fNW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="26" id="nAj-mR-LZ3"/>
-                            <constraint firstItem="74j-7Y-fNW" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="64" id="qnI-Kk-dPS"/>
+                            <constraint firstItem="I1K-y0-ISH" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="2E3-mn-9WD"/>
+                            <constraint firstItem="Jt6-rG-U8x" firstAttribute="top" secondItem="fla-Af-5lv" secondAttribute="bottom" constant="8" id="3Xm-h7-Dub"/>
+                            <constraint firstItem="BeF-Vu-JzK" firstAttribute="top" secondItem="pqW-la-yHh" secondAttribute="bottom" constant="8" id="3nt-13-JmP"/>
+                            <constraint firstItem="fla-Af-5lv" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="4Qh-Bn-nNc"/>
+                            <constraint firstItem="Jt6-rG-U8x" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="9lx-Zx-HpD"/>
+                            <constraint firstItem="I1K-y0-ISH" firstAttribute="top" secondItem="RjJ-ix-sDr" secondAttribute="bottom" constant="25" id="Iuc-ey-5Sg"/>
+                            <constraint firstItem="BeF-Vu-JzK" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="Ult-SF-alA"/>
+                            <constraint firstItem="RjJ-ix-sDr" firstAttribute="top" secondItem="BeF-Vu-JzK" secondAttribute="bottom" constant="8" id="Yyf-DP-Rhi"/>
+                            <constraint firstItem="fla-Af-5lv" firstAttribute="top" secondItem="I1K-y0-ISH" secondAttribute="bottom" constant="8" id="dGw-X8-Kvg"/>
+                            <constraint firstItem="RjJ-ix-sDr" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="iMg-bv-AHK"/>
+                            <constraint firstItem="pqW-la-yHh" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="nXa-2a-0a1"/>
+                            <constraint firstItem="pqW-la-yHh" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="53" id="tle-8k-OXa"/>
                         </constraints>
                         <animations/>
                     </view>
-                    <connections>
-                        <outlet property="directionsLabel" destination="isr-qG-Dt4" id="cYQ-l2-LXk"/>
-                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="-9" y="792"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="LogoIcon" width="512" height="512"/>
-    </resources>
 </document>
